dapractors/templates/pub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      annotations:
        dapr.io/app-id: "app1"
        dapr.io/enabled: "true"
        dapr.io/id: "app1"
        dapr.io/app-port: "8000"
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: k3d-myreg:5000/app1:latest
        ports:
        - containerPort: 8000
